<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dev.ettee.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list_receipt"
        android:name="com.dev.ettee.ui.ListReceiptFragment"
        android:label="@string/title_list_receipt"
        tools:layout="@layout/fragment_list_receipt" />

    <fragment
        android:id="@+id/navigation_add_receipt"
        android:name="com.dev.ettee.ui.AddReceiptFragment"
        android:label="@string/title_add_receipt"
        tools:layout="@layout/fragment_add_receipt" />

    <fragment
        android:id="@+id/navigation_list_category"
        android:name="com.dev.ettee.ui.ListCategoryFragment"
        android:label="@string/title_list_category"
        tools:layout="@layout/fragment_list_category" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.dev.ettee.ui.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>
