<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_edit_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/account_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="500"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/dialog_edit_password_et_current"
        android:inputType="textPassword"
        android:hint="@string/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:theme="@style/edit_text"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/dialog_edit_password_et_new"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:theme="@style/edit_text"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/dialog_edit_password_et_conf"
        android:inputType="textPassword"
        android:hint="@string/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:theme="@style/edit_text"
        android:textAlignment="center"/>

</LinearLayout>