<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_address_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/address_your"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="500"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/dialog_address_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/address_number"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="500"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/dialog_address_number_et"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="number"
        android:theme="@style/edit_text" />

    <TextView
        android:id="@+id/dialog_address_street_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/address_street"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="500"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/dialog_address_street_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="text"
        android:theme="@style/edit_text" />

    <TextView
        android:id="@+id/dialog_address_city_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/address_city"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="500"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/dialog_address_city_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="text"
        android:theme="@style/edit_text" />

    <TextView
        android:id="@+id/dialog_address_country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/address_country"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="500"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/dialog_address_country_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="text"
        android:theme="@style/edit_text" />

    <TextView
        android:id="@+id/dialog_address_zipcode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/address_zipCcode"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="500"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/dialog_address_zipcode_et"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="number"
        android:theme="@style/edit_text" />

</LinearLayout>