<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccountFragment"
    android:id="@+id/fragment_account">

    <TextView
        android:id="@+id/account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/title_account"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="500"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/account_username_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/account_username"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/account_username_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/lorem_ipsum_5"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/account_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_marginTop="15dp"
                android:text="@string/account_password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/account_password_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/passwordHidden"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/account_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_marginTop="15dp"
                android:text="@string/account_email"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/account_email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/lorem_ipsum_5"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/account_firstname_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_marginTop="15dp"
                android:text="@string/account_firstname"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/account_firstname_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/lorem_ipsum_5"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/account_lastname_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_marginTop="15dp"
                android:text="@string/account_lastname"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/account_lastname_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/lorem_ipsum_5"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/account_address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_marginTop="15dp"
                android:text="@string/account_address"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/account_address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/lorem_ipsum_5"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/account_currency_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_marginTop="15dp"
                android:text="@string/account_currency"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/account_currency_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/lorem_ipsum_5"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/account_sign_out_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sign_out_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>